--- a/bpms-client/package.json
+++ b/bpms-client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
